<resources>
    <string name="app_name">Гражданин</string>
    <string name="mainTitle">Главная</string>
    <string name="profileTitle">Профиль</string>
    <string name="newsTitle">Новости</string>
    <string name="alarmTitle">Срочно</string>
    <string name="addTitle">Добавить</string>
    <string name="findMyLocation">Найти</string>
    <string name="showDescription">Описание</string>
    <string name="changeTime">Изменить время</string>
    <string name="incidentImage">Инцидент</string>
    <string name="alarmNotification">Уведомления</string>
    <string name="lastNotification">Последнее</string>
    <string name="addMaterial">1. Загрузите материалы (до 4 шт.)</string>
    <string name="addSituation">2. Опишите ситуацию</string>
    <string name="confirmation">3. Подтверждение</string>
    <string name="upload">Загрузить</string>
    <string name="description">Описание</string>
    <string name="notify">Оповестить</string>
    <string name="edit">Сохранить изменения</string>
    <string name="options">Настройки</string>
    <string name="questionAnswer">Вопрос-ответ</string>
    <string name="termAndCondition">Правила и условия использования</string>
    <string name="privacyPolicy">Политика конфиденциальности</string>
    <string name="consentDataProcess">Согласие на обработку данных</string>
    <string name="noNews">На данный момент новостей нет</string>
    <string name="noNotification">Нет уведомлений</string>
    <string name="uploadImage">ЗагруженныеИзображения</string>
    <string name="photo">Дополнительно:</string>
    <string name="clear">Отчистить</string>
    <string name="login">Login</string>
</resources>