<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:screenOrientation="portrait"
        tools:context=".activity.HomeActivity"
        tools:ignore="ExtraText">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/frame_layout_home">
        <com.yandex.mapkit.mapview.MapView
                tools:ignore="MissingConstraints"
                android:id="@+id/mapview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:text=""
                    android:layout_alignParentStart="false"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="370dp"
                    android:alpha="0.6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/sun"
                    android:id="@+id/changeTIme"
                    android:contentDescription="@string/changeTime"
                    app:maxImageSize="40dp"
                    android:layout_marginEnd="10dp"/>
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:text=""
                    android:layout_alignParentStart="false"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="450dp"
                    android:alpha="0.6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/findme"
                    android:id="@+id/findme"
                    android:contentDescription="@string/findMyLocation"
                    app:maxImageSize="40dp"
                    android:layout_marginEnd="10dp"/>
            <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".activity.HomeActivity"
                    tools:ignore="ExtraText">
                <TextView
                        android:text=""
                        android:textAlignment="center"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="40dp"
                        android:textSize="18sp"
                        android:background="@drawable/ic_rounded_2"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:id="@+id/city"/>
                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="550dp"
                        android:visibility="invisible"
                        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
                        android:id="@+id/frame_layout_r"
                        android:background="@drawable/ic_rounded">
                    <TextView
                            android:layout_marginTop="50dp"
                            android:layout_marginLeft="30dp"
                            android:autoSizeTextType="uniform"
                            android:autoSizeMinTextSize="12sp"
                            android:autoSizeMaxTextSize="100sp"
                            android:autoSizeStepGranularity="2sp"
                            android:textColor="@color/grey"
                            android:fontFamily="sans-serif-medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/lastUpdate"
                            tools:ignore="HardcodedText,RtlHardcoded"
                    />
                    <TextView
                            android:layout_marginTop="75dp"
                            android:layout_marginLeft="30dp"
                            android:textColor="@color/white"
                            android:fontFamily="sans-serif-medium"
                            android:autoSizeTextType="uniform"
                            android:autoSizeMinTextSize="12sp"
                            android:autoSizeMaxTextSize="100sp"
                            android:autoSizeStepGranularity="2sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/description"
                            tools:ignore="HardcodedText,RtlHardcoded"
                    />
                    <TextView
                            android:layout_marginTop="100dp"
                            android:layout_marginLeft="30dp"
                            android:textColor="@color/grey"
                            android:fontFamily="sans-serif-medium"
                            android:autoSizeTextType="uniform"
                            android:autoSizeMinTextSize="12sp"
                            android:autoSizeMaxTextSize="100sp"
                            android:autoSizeStepGranularity="2sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/streetAndKm"
                            tools:ignore="HardcodedText,RtlHardcoded"
                    />
                    <ImageView android:layout_width="70dp"
                               android:layout_height="wrap_content"
                               android:layout_gravity="center|top"
                               android:src="@drawable/ic_baseline_remove_24"
                               android:contentDescription="@string/showDescription">
                    </ImageView>
                    <ImageView
                            android:layout_marginTop="50dp"
                            android:layout_gravity="right|top"
                            android:layout_marginEnd="30dp"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_baseline_remove_24"
                            android:id="@+id/imageIncident"
                            android:contentDescription="@string/incidentImage"
                            tools:ignore="RtlHardcoded">
                    </ImageView>
                    <TextView
                            android:visibility="invisible"
                            android:layout_marginTop="155dp"
                            android:layout_marginLeft="30dp"
                            android:textColor="@color/white"
                            android:textSize="23sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/photo"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/photo"
                            tools:ignore="RtlHardcoded"
                    />
                    <androidx.viewpager.widget.ViewPager
                            android:layout_width="wrap_content"
                            android:layout_height="250dp"
                            android:visibility="invisible"
                            android:layout_marginTop="200dp"
                            android:layout_marginStart="35dp"
                            android:layout_marginEnd="35dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:id="@+id/viewPagerHome"
                            tools:ignore="MissingConstraints"/>
                </FrameLayout>
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </com.yandex.mapkit.mapview.MapView>
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_add_24"
            android:id="@+id/addCross"
            android:contentDescription="@string/addTitle"
            app:layout_anchor="@id/bottomAppBar"
            app:maxImageSize="40dp"/>
    <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottomAppBar"
            android:layout_gravity="bottom"
            android:background="@color/white"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="50dp">
        <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@android:color/transparent"
                app:labelVisibilityMode="labeled"
                app:itemTextColor="@color/bottom_nav_color"
                app:itemIconTint="@color/bottom_nav_color"
                app:menu="@menu/button_menu"/>
    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>